# mygrf

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  main.cpp  main_split.cpp
R/: RcppExports.R
src/: RcppUtilities.h
src/src/analysis/: SplitFrequencyComputer.cpp  SplitFrequencyComputer.h
src/src/commons/: Data.cpp  Data.h  globals.h  utility.cpp  utility.h
src/src/forest/: Forest.cpp  Forest.h  ForestOptions.cpp  ForestOptions.h  ForestPredictor.cpp  ForestPredictor.h  ForestPredictors.cpp  ForestPredictors.h  ForestTrainer.cpp  ForestTrainer.h  ForestTrainers.cpp  ForestTrainers.h
src/src/prediction/: DefaultPredictionStrategy.h  InstrumentalPredictionStrategy.cpp  InstrumentalPredictionStrategy.h  ObjectiveBayesDebiaser.cpp  ObjectiveBayesDebiaser.h  OptimizedPredictionStrategy.h  Prediction.cpp  Prediction.h  PredictionValues.cpp  PredictionValues.h  RegressionPredictionStrategy.cpp  RegressionPredictionStrategy.h
src/src/prediction/collector/: DefaultPredictionCollector.cpp  DefaultPredictionCollector.h  OptimizedPredictionCollector.cpp  OptimizedPredictionCollector.h  PredictionCollector.h  SampleWeightComputer.cpp  SampleWeightComputer.h  TreeTraverser.cpp  TreeTraverser.h
src/src/relabeling/: InstrumentalRelabelingStrategy.cpp  InstrumentalRelabelingStrategy.h  NoopRelabelingStrategy.cpp  NoopRelabelingStrategy.h  RelabelingStrategy.h
src/src/sampling/: RandomSampler.cpp  RandomSampler.h  SamplingOptions.cpp  SamplingOptions.h
src/src/splitting/: InstrumentalSplittingRule.cpp  InstrumentalSplittingRule.h  RegressionSplittingRule.cpp  RegressionSplittingRule.h  SplittingRule.h
src/src/splitting/factory/: InstrumentalSplittingRuleFactory.cpp  InstrumentalSplittingRuleFactory.h  RegressionSplittingRuleFactory.cpp  RegressionSplittingRuleFactory.h  SplittingRuleFactory.h
src/src/tree/: Tree.cpp  Tree.h  TreeOptions.cpp  TreeOptions.h  TreeTrainer.cpp  TreeTrainer.h
